fixed some links breaking zoom on mobile

--- a/static/blog.css
+++ b/static/blog.css
@@ -47,6 +47,10 @@ article * {
   line-height: 1.75;
 }
 
+article a {
+  word-break: break-word;
+}
+
 /* syntax highlighting */
 pre {
   overflow-x: auto;
@@ -112,3 +116,4 @@ blockquote cite {
 blockquote cite:before {
   content: '- ';
 }
+
